--- a/index.html
+++ b/index.html
@@ -18,7 +18,8 @@
       rel="stylesheet"
     />
 
-    <title>Document</title>
+    <title>Crypto Landing Page</title>
+    
   </head>
   <body>
     <div class="container">
